--- a/src/main/webapp/home/css/common.css
+++ b/src/main/webapp/home/css/common.css
@@ -179,9 +179,9 @@ footer .foot_area .snslink li + li + li a {background-image:url(../img/ico_insta
 .visualRoll {position:relative; width:100%;}
 .viewImgList {position:relative; width:100%;}	
 .viewImgList li {text-align:center; height:550px; line-height:550px;}
-.viewImgList li.imglist0 {position:relative; z-index:50; background:url(/sht_webapp/home/img/mainslide_mo3.jpg);}
-.viewImgList li.imglist1 {position:absolute; width:100%; left:0; top:0; z-index:10; background:gray; background:url(/sht_webapp/home/img/mainslide_mo2.jpg);}
-.viewImgList li.imglist2 {position:absolute; width:100%; left:0; top:0; z-index:10; background:gray;background:url(/sht_webapp/home/img/mainslide_mo1.jpg);}
+.viewImgList li.imglist0 {position:relative; z-index:50; background:url(/home/img/mainslide_mo3.jpg);}
+.viewImgList li.imglist1 {position:absolute; width:100%; left:0; top:0; z-index:10; background:gray; background:url(/home/img/mainslide_mo2.jpg);}
+.viewImgList li.imglist2 {position:absolute; width:100%; left:0; top:0; z-index:10; background:gray;background:url(/home/img/mainslide_mo1.jpg);}
 .viewImgList li {background-size:cover !important;}
 .viewImgList li .roll_content {position:relative; }
 .viewImgList li .roll_content .roll_txtline {position:absolute; left:0; bottom:60px; width:100%; line-height:1; text-align:center; font-size:22px; color:#fff; letter-spacing:2px;}
